--- a/voluncheer/templates/opportunityboard/updateanopportunity.html
+++ b/voluncheer/templates/opportunityboard/updateanopportunity.html
@@ -112,6 +112,7 @@
                       }
                     });
                   });
+                  $("#opportunity_edit a").html("link");
                 </script>
             </div>
         </div>
