--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -26,6 +26,12 @@
                 <hr align="center">
             </div>
             {% endif %}
+            {% if user.pk is not curr_user.pk %}
+            <div class="url">
+                <a href="#" onclick="toggleChatOrg()">CHAT</a>
+                <hr align="center">
+            </div>
+            {% endif %}
             <div class="url">
                 <a href="#impact">IMPACT</a>
                 <hr align="center">
@@ -238,7 +244,6 @@
 
 
   {% elif user.is_volunteer %}
-  </div>
     <!-- Side Nav -->
     <div class="sidenav">
         <div class="profile">
@@ -270,6 +275,12 @@
 
             <div class="url">
                 <a href="{% url 'saved_events' %}" >MY VOLUNCHEERS</a>
+                <hr align="center">
+            </div>
+            {% endif %}
+            {% if user.pk is not curr_user.pk %}
+            <div class="url">
+                <a href="#" onclick="toggleChatVol()">CHAT</a>
                 <hr align="center">
             </div>
             {% endif %}
@@ -352,5 +363,7 @@
     </div>
     <!-- End -->
   {% endif %}
+  {{ curr_user.email|json_script:"currUser" }}
+  {{ user.email|json_script:"profileUser" }}
   <script type="text/javascript" src="{% static 'js/jquery_appendix.js' %}"></script>
 {% endblock %}
