--- a/voluncheer/static/css/chatroom.css
+++ b/voluncheer/static/css/chatroom.css
@@ -88,13 +88,13 @@ img{ max-width:100%;}
 
 .incoming_msg_img {
   display: inline-block;
-  width: 6%;
+  width: 40px;
 }
 .received_msg {
   display: inline-block;
   padding: 0 0 0 10px;
   vertical-align: top;
-  width: 92%;
+  width: 80%;
  }
  .received_withd_msg p {
   background: #e8f5ff none repeat scroll 0 0;
@@ -109,9 +109,11 @@ img{ max-width:100%;}
   color: #747474;
   display: block;
   font-size: 12px;
-  margin: 8px 0 0;
+  margin: 0 0 8px;
 }
-.received_withd_msg { max-width: 80%;}
+.received_withd_msg { 
+  max-width: 90%;
+}
 .mesgs {
   float: left;
   padding: 30px 15px 0 25px;
