--- a/voluncheer/templates/chatroom/chat_homepage.html
+++ b/voluncheer/templates/chatroom/chat_homepage.html
@@ -32,10 +32,10 @@
                   {% for room in rooms %}
                     <div class="chat_list active_chat" id="{{ room }}">
                       <div class="chat_people">
-                        <div class="chat_img"> <img src="{% static "images/organize_image_0.png" %}" alt="TestOrg"> </div>
+                        <div class="chat_img"> <img src="{% static 'images/organize_image_0.png' %}" alt="TestOrg"> </div>
                         <div class="chat_ib">
-                          <h5>{{ room }} <span class="chat_date">Feb 5</span></h5>
-                          <p>Congratulations, you've been selected as a volunteer, see you on your first day this Friday!</p>
+                          <h5>{{ room.name }}</h5>
+                          <p>{{room.message_set.first}}</p>
                         </div>
                       </div>
                     </div>
