--- a/voluncheer/templates/profiles/posttogallery.html
+++ b/voluncheer/templates/profiles/posttogallery.html
@@ -35,6 +35,12 @@
             <a href="{% url 'saved_events' %}" >MY VOLUNCHEERS</a>
             <hr align="center">
         </div>
+        {% if user.pk is not curr_user.pk %}
+            <div class="url">
+                <a href="#" onclick="toggleChatVol()">CHAT</a>
+                <hr align="center">
+            </div>
+        {% endif %}
         <div class="url">
             <a href="{% url 'create_post' %}" class="active">CREATE POST</a>
             <hr align="center">
