--- a/voluncheer/templates/profiles/savedevents.html
+++ b/voluncheer/templates/profiles/savedevents.html
@@ -34,6 +34,12 @@
                 <a href="{% url 'saved_events' %}" class="active">MY VOLUNCHEERS</a>
                 <hr align="center">
             </div>
+            {% if user.pk is not curr_user.pk %}
+            <div class="url">
+                <a href="#" onclick="toggleChatVol()">CHAT</a>
+                <hr align="center">
+            </div>
+            {% endif %}
             <div class="url">
                 <a href="{% url 'create_post' %}" >CREATE POST</a>
                 <hr align="center">
