--- a/voluncheer/templates/voluncheer/opportunityboard.html
+++ b/voluncheer/templates/voluncheer/opportunityboard.html
@@ -38,9 +38,9 @@
                   </path>
                 </svg>
               </div>
-              <input id="search" type="text" placeholder="Search..." />
+              <input id="search" type="text" name="keyword" placeholder="Search..." />
               <div class="result-count">
-                <span>108 </span>results
+                <span id="search-result-num">{{ opportunity_lists|length }} </span>results
               </div>
             </div>
           </div>
@@ -91,7 +91,7 @@
                   </ul>
                 </li>
               </div>
-              <div class="input-field">
+              <!-- <div class="input-field">
                 <div class="input-select">
                   <select data-trigger="" name="choices-single-defaul">
                     <option placeholder="" value="">WORK PLACE</option>
@@ -100,9 +100,7 @@
                     <option>FUSION</option>
                   </select>
                 </div>
-              </div>
-            </div>
-            <div class="row second">
+              </div> -->
               <div class="slidecontainer">
                 <label for="formControlRange">Distance (within)</label><br>
                 <input type="range" name="distance" class="form-control-range" min="0" max="50" step="1" value="0"
@@ -113,10 +111,12 @@
                 <input type="hidden" id="latitude" name="latitude" value="0">
                 <input type="hidden" id="longitude" name="longitude" value="0">
               </div>
-              <div class="slidecontainer">
+            </div>
+            <div class="row second">
+              <!-- <div class="slidecontainer">
                 <label for="date-range">Date Range</label><br>
                 <input type="text" id="date-range" name="startdates">
-              </div>
+              </div> -->
             </div>
             <div class="row third"></div>
             <div class="input-field">
