--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -231,6 +231,30 @@
                         <p class="vol-position-description-h2">Date: {{ opportunity.date }}</p>
                         <p class="vol-position-description-h2">End: {{ opportunity.end }}</p>
                         <p class="vol-position-description-h2">{{ opportunity.description }}</p>
+                        {% if user.pk is curr_user.pk %}
+                        <form method="get" id="opportunities-detail-{{opportunity.pk}}-form" class="opportunities-detail-form" action="{% url 'attendance' opportunity.pk %}">
+                            <div id="volunteer-attandence">
+                                <p class="vol-position-description-h1">Volunteer attendance:</p>
+                                {% for volunteer in opportunity.volunteers.all %}
+                                    {% if volunteer in opportunity.attended_volunteers.all %}
+                                    <div class="sticky-note green">
+                                        <input type="checkbox" class="volunteer-attandence" name="volunteer-attended" value="{{volunteer.pk}}">Attended
+                                    {% else %}
+                                    <div class="sticky-note">
+                                        <input type="checkbox" class="volunteer-attandence" name="volunteer-attended" value="{{volunteer.pk}}">Did Not Attend
+                                    {% endif %}
+                                        <br>
+                                        Name: <a href="{%url 'profile' volunteer.pk%}">{{volunteer.first_name}} {{volunteer.last_name}}</a>
+                                        {% if volunteer.photo %}
+                                        <img src="{{volunteer.photo.url}}" alt="profile pic" width="100" height="100"/>
+                                        {% endif %}
+                                    </div>
+                                {% endfor %}
+                            </div>
+                            <button type="submit" id="opportunities-detail-form-btn" class="opportunities-detail-form-submit">Confirm Attendence</button>
+                        </form>
+                        <div class="url"><a href="#opportunity-edit-{{opportunity.pk}}" id="opportunities-detail-{{opportunity.pk}}" class="opportunities-detail-btn" onclick="ShowDetail(this)">Details</a></div>
+                        {% endif %}
                         <hr align="center">
 				    </article>
                 {% endfor %}
