removed comma between first and last name

--- a/voluncheer/templates/profiles/profile.html
+++ b/voluncheer/templates/profiles/profile.html
@@ -275,7 +275,7 @@
                 <img src="{{volunteer.photo.url}}" alt="profile pic" width="100" height="100"/>
             {% endif %}
             <div class="name">
-                {{ volunteer.first_name }}, {{ volunteer.last_name }}
+                {{ volunteer.first_name }} {{ volunteer.last_name }}
             </div>
             <div class="email">
                 {{ user.email }}
