--- a/voluncheer/templates/volunteer/vol_org_view.html
+++ b/voluncheer/templates/volunteer/vol_org_view.html
@@ -19,11 +19,11 @@
         </div>
     </div>
     <div class="sidenav-url">
-        {% if user.pk is not organization.user.pk %}
-        <div class="url">
-            <a href="#" id="roomConnect" onclick="toggleChatOrg()">CHAT</a>
-            <hr align="center">
-        </div>
+        {% if user.pk is not organization.pk %}
+            <div class="url">
+                <a href="#" id="roomConnect" onclick="toggleChatOrg()">CHAT</a>
+                <hr align="center">
+            </div>
         {% endif %}
     </div>
 </div>
